@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2007/03/22 15:43:38 joerg Exp $
-
-SHA1 (xf86-video-imstt-1.1.0.tar.bz2) = 2ae92a244bafef83e4b016cab204e2f5797cdb09
-RMD160 (xf86-video-imstt-1.1.0.tar.bz2) = 2ead87305e8bc7ad3b4b1dbd8c3a9e2f59e0ff9d
-Size (xf86-video-imstt-1.1.0.tar.bz2) = 234492 bytes
